# robot-salamander-hcl

./: 4legs_controller.cpp  CMakeLists.txt  README.md
KMR_dxlP1/: CHANGELOG  CMakeLists.txt  LICENSE  README.md
KMR_dxlP1/config/motor_models/: MX_64R.yaml
KMR_dxlP1/docs/: CMakeLists.txt  Doxyfile.in
KMR_dxlP1/docs/doxygen-awesome/: doxygen-awesome-KM-robota.css  myheader copy.html  myheader.html
KMR_dxlP1/docs/generated_docs/: Doxyfile
KMR_dxlP1/docs/generated_docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000002_000003.html  dir_000004_000001.html  dir_000006_000003.html  dir_000007_000002.html  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.html  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.js  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c_dep.map  dir_25e749e74ddf194cb7316299d77d57ca.html  dir_33ff667eb769570e754fc36d6faf56e7.html  dir_33ff667eb769570e754fc36d6faf56e7.js  dir_6e0440fc7b04f5332c0de4a00a515cc4.html  dir_6e0440fc7b04f5332c0de4a00a515cc4.js  dir_70fb5d1cee1efa5421e784baac64de36.html  dir_70fb5d1cee1efa5421e784baac64de36.js  dir_70fb5d1cee1efa5421e784baac64de36_dep.map  dir_70fb5d1cee1efa5421e784baac64de36_dep.md5  dir_9f351d46ce3cc29445a41dc3a31e6919.html  dir_9f351d46ce3cc29445a41dc3a31e6919.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.map  dir_b65f215975d3fee56e2c527607af6ac5.html  dir_b65f215975d3fee56e2c527607af6ac5.js  dir_b65f215975d3fee56e2c527607af6ac5_dep.map  dir_b65f215975d3fee56e2c527607af6ac5_dep.md5  dir_c4956c2567dcbf9ab235e55fa554ddd8.html  dir_c4956c2567dcbf9ab235e55fa554ddd8.js  dir_c4956c2567dcbf9ab235e55fa554ddd8_dep.map  dir_c4956c2567dcbf9ab235e55fa554ddd8_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_ecce0ed3a1f8609e7126946431a20faa.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  (+42 more)
KMR_dxlP1/docs/generated_docs/html/d0/d04/: test__motors__config_8yaml.html
KMR_dxlP1/docs/generated_docs/html/d0/d3f/: classKMR_1_1dxlP1_1_1BaseRobot__inherit__graph.map  classKMR_1_1dxlP1_1_1BaseRobot__inherit__graph.md5
KMR_dxlP1/docs/generated_docs/html/d0/d7d/: setup.html
KMR_dxlP1/docs/generated_docs/html/d0/dd7/: classKMR_1_1dxlP1_1_1Handler-members.html
KMR_dxlP1/docs/generated_docs/html/d1/d05/: classKMR_1_1dxlP1_1_1BaseRobot-members.html
KMR_dxlP1/docs/generated_docs/html/d1/d13/: robot_8cpp__incl.map  robot_8cpp__incl.md5
KMR_dxlP1/docs/generated_docs/html/d1/d17/: namespaceKMR_1_1dxlP1.html  namespaceKMR_1_1dxlP1.js
KMR_dxlP1/docs/generated_docs/html/d1/d61/: setup_8md.html
KMR_dxlP1/docs/generated_docs/html/d1/d75/: classKMR_1_1dxlP1_1_1Hal.html  classKMR_1_1dxlP1_1_1Hal.js
KMR_dxlP1/docs/generated_docs/html/d1/d9b/: KMR__dxlP1__hal_8hpp__dep__incl.map  KMR__dxlP1__hal_8hpp__dep__incl.md5
KMR_dxlP1/docs/generated_docs/html/d1/dd3/: classRobot-members.html  use_8md.html
KMR_dxlP1/docs/generated_docs/html/d1/de1/: test__dxlP1_8cpp.html  test__dxlP1_8cpp.js
KMR_dxlP1/docs/generated_docs/html/d2/d2f/: structKMR_1_1dxlP1_1_1Control__modes-members.html
KMR_dxlP1/docs/generated_docs/html/d2/d50/: KMR__dxlP1__handler_8hpp.html  KMR__dxlP1__handler_8hpp.js  KMR__dxlP1__handler_8hpp_source.html
KMR_dxlP1/docs/generated_docs/html/d2/d5b/: KMR__dxlP1__writer_8cpp__incl.map  KMR__dxlP1__writer_8cpp__incl.md5
KMR_dxlP1/docs/generated_docs/html/d2/dc5/: KMR__dxlP1__handler_8hpp__incl.map  KMR__dxlP1__handler_8hpp__incl.md5
KMR_dxlP1/docs/generated_docs/html/d2/de0/: robot_8hpp.html  robot_8hpp.js  robot_8hpp_source.html
KMR_dxlP1/docs/generated_docs/html/d3/d3e/: classKMR_1_1dxlP1_1_1Handler__inherit__graph.map  classKMR_1_1dxlP1_1_1Handler__inherit__graph.md5
KMR_dxlP1/docs/generated_docs/html/d3/d54/: classKMR_1_1dxlP1_1_1Reader.html  classKMR_1_1dxlP1_1_1Reader.js
KMR_dxlP1/docs/generated_docs/html/d3/d80/: structKMR_1_1dxlP1_1_1Motor__data__field.html  structKMR_1_1dxlP1_1_1Motor__data__field.js
KMR_dxlP1/docs/generated_docs/html/d3/dc5/: structKMR_1_1dxlP1_1_1Motor-members.html
KMR_dxlP1/docs/generated_docs/html/d4/d03/: KMR__dxlP1__hal_8cpp__incl.map  KMR__dxlP1__hal_8cpp__incl.md5
KMR_dxlP1/docs/generated_docs/html/d4/d21/: test__dxlP1_8cpp__incl.map  (+1 more)
KMR_dxlP1/docs/generated_docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+66 more)
KMR_dxlP1/docs/generated_docs/latex/: annotated.tex  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.tex  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c_dep.md5  dir_25e749e74ddf194cb7316299d77d57ca.tex  dir_33ff667eb769570e754fc36d6faf56e7.tex  dir_6e0440fc7b04f5332c0de4a00a515cc4.tex  dir_70fb5d1cee1efa5421e784baac64de36.tex  dir_9f351d46ce3cc29445a41dc3a31e6919.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  dir_b65f215975d3fee56e2c527607af6ac5.tex  dir_c4956c2567dcbf9ab235e55fa554ddd8.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_ecce0ed3a1f8609e7126946431a20faa.tex  files.tex  hierarchy.tex  index.tex  namespaces.tex  refman.tex
KMR_dxlP1/docs/markdown_sources/: mainpage.md  setup.md  use.md
KMR_dxlP1/include/: KMR_dxlP1_hal.hpp  KMR_dxlP1_handler.hpp  KMR_dxlP1_reader.hpp  KMR_dxlP1_robot.hpp  KMR_dxlP1_writer.hpp
KMR_dxlP1/source/: KMR_dxlP1_hal.cpp  KMR_dxlP1_handler.cpp  KMR_dxlP1_reader.cpp  KMR_dxlP1_robot.cpp  KMR_dxlP1_writer.cpp
(+190 files in other folders)
